add system test and unit test